--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.min.css";
+
+
+.footer{
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+    height: 40px;
+    background-color: blue;
+    text-align: center;
+    color: white;
+    
+}
